Found Total Electron Count (TEC) dataset

--- a/space_weather_tools.ipynb
+++ b/space_weather_tools.ipynb
@@ -4,8 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ovation Aurora Short Term Forecast\n",
-    "Short notebook ingesting the NOAA data (text file), and saving as a [pandas](http://pandas.pydata.org/) array, along with forecast timestamp.\n",
+    "# Space Weather Tools\n",
+    "\n",
+    "The following notebook shows the various exploratory steps in creating a series\n",
+    "\n",
+    "## Ovation Aurora Short Term Forecast\n",
+    "To start with, we will be investigating theaurora borealis forecast produced by the OVATION Prime model, available at the Space Weather Prediction Center. We'll be ingesting the NOAA data (text file), and saving as a [pandas](http://pandas.pydata.org/) array, along with forecast timestamp.\n",
     "\n",
     "Link: http://services.swpc.noaa.gov/text/aurora-nowcast-map.txt\n",
     "\n",
