Found Total Electron Count (TEC) dataset

--- a/space_weather_tools.ipynb
+++ b/space_weather_tools.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Space Weather Tools\n",
     "\n",
-    "The following notebook shows the various exploratory steps in creating a series\n",
+    "The following notebook shows the various exploratory steps in creating a series of hooks for Python regarding live space weather data that is available on the web.\n",
     "\n",
     "## Ovation Aurora Short Term Forecast\n",
     "To start with, we will be investigating theaurora borealis forecast produced by the OVATION Prime model, available at the Space Weather Prediction Center. We'll be ingesting the NOAA data (text file), and saving as a [pandas](http://pandas.pydata.org/) array, along with forecast timestamp.\n",
@@ -385,6 +385,29 @@
    "source": [
     "Well, not quite there yet. We'll still need to figure out how to properly define the extent of the overlay on top of our projection. But for the time being, that's distracting us a little from our main goal, which was simply to export our transrent images so that we can overlay them elsewhere!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Total Electron Count\n",
+    "http://www.sws.bom.gov.au/Satellite/2/2\n",
+    "\n",
+    "https://iono.jpl.nasa.gov/latest_rti_global.html\n",
+    "\n",
+    "http://www.swpc.noaa.gov/products/ctipe-total-electron-content-forecast\n",
+    "\n",
+    "Data at: http://services.swpc.noaa.gov/experimental/text/ctipe-tec-output.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
