--- a/space_weather_tools.ipynb
+++ b/space_weather_tools.ipynb
@@ -472,6 +472,21 @@
     "plt.title('OVATION Aurora Short Term Forecast for {}\\n'.format(_timestamp))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing a cron-job-able script\n",
+    "Writing a script that can be cron-jobbed, we have to condition the workflow not to assume that it has run continuously in the days and hours leading to its runtime. The unfortunate aspect of our data source is that is does not store past data Indeed, perhaps the computer was being re-booted, or was being over-utilized for some other reason.\n",
+    "\n",
+    "With this in mind, we need to remember:\n",
+    "\n",
+    "1. 7 days into the past for the 30-minute forecast\n",
+    "2. Keep all of the 3-day forecast up to the current time.\n",
+    "\n",
+    "Anything else can be flushed To handle this, we'll have to store the current time, and go delete any file(s)."
+   ]
   }
  ],
  "metadata": {
