--- a/notebooks/space_weather_tools.ipynb
+++ b/notebooks/space_weather_tools.ipynb
@@ -495,14 +495,20 @@
     "      ├ /30min\n",
     "      |    └ 7 * 24 images go here\n",
     "      └ /3day\n",
-    "           └ 3 * 24 images go here\n",
-    "           \n",
+    "           └ 3 * 24 images go here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final product\n",
     "The actual production-ready code can be found in the `../aurora` folder:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -528,16 +534,19 @@
       "\n",
       "\n",
       "def directories_exist(dirs):\n",
-      "    \"\"\"Given a directory name (string), creates it if it doesn't\n",
+      "    \"\"\"\n",
+      "    Given a directory name (string), creates it if it doesn't\n",
       "    exist already.\n",
       "\n",
-      "    str -> None\"\"\"\n",
+      "    str -> None\n",
+      "    \"\"\"\n",
       "    for directory in dirs:\n",
       "        if not os.path.exists(directory):\n",
       "            os.makedirs(directory)\n",
       "    \n",
       "def get_forecast(url):\n",
-      "    \"\"\"Given data URL, retrieves the array file for global\n",
+      "    \"\"\"\n",
+      "    Given data URL, retrieves the array file for global\n",
       "    forecasts from the swpc.noaa site, given in Plate CarrÃ©e.\n",
       "    \n",
       "    Extent:\n",
@@ -548,7 +557,8 @@
       "    array: pandas array of the forecast\n",
       "    datetime: date & time of forecast\n",
       "    \n",
-      "    str -> np.array, datetime\"\"\"\n",
+      "    str -> np.array, datetime\n",
+      "    \"\"\"\n",
       "        \n",
       "    extent = (-180, 180, -90, 90)\n",
       "    timestamp = None\n",
@@ -574,10 +584,12 @@
       "    return array, timestamp\n",
       "\n",
       "def aurora_cmap():\n",
-      "    \"\"\"Return a colormap with aurora-like colors\n",
+      "    \"\"\"\n",
+      "    Return a colormap with aurora-like colors\n",
       "    and transparency.\n",
       "    \n",
-      "    None -> LinearSegmentedColormap\"\"\"\n",
+      "    None -> LinearSegmentedColormap\n",
+      "    \"\"\"\n",
       "    from matplotlib.colors import LinearSegmentedColormap\n",
       "    stops = {'red': [(0.00, 0.1725, 0.1725),\n",
       "                     (0.50, 0.1725, 0.1725),\n",
@@ -598,14 +610,16 @@
       "    return LinearSegmentedColormap('aurora', stops)\n",
       "\n",
       "def save_image(array, timestamp, folder, imtype='jpg'):\n",
-      "    \"\"\"Saves the aurora tabular data into a jpg, whose\n",
+      "    \"\"\"\n",
+      "    Saves the aurora tabular data into a jpg, whose\n",
       "    top-left pixel is `(0, 0, 0)`.\n",
       "    \n",
       "    Arguments:\n",
       "    array:     the tabular data\n",
       "    timestamp: timestam of the forecast for filename\n",
       "    \n",
-      "    pd.Dataframe, datetime, str, (str) -> None\"\"\"\n",
+      "    pd.Dataframe, datetime, str, (str) -> None\n",
+      "    \"\"\"\n",
       "    \n",
       "    # Overwrite top-left pixel for transparency in STK\n",
       "    array[0, 0] = 0\n",
@@ -628,12 +642,14 @@
       "                dpi=DPI)\n",
       "    \n",
       "def is_older_than(filename, days=7):\n",
-      "    \"\"\"Returns True if file was created or modified more than the number\n",
+      "    \"\"\"\n",
+      "    Returns True if file was created or modified more than the number\n",
       "    of `days` ago. Default: 7 days.\n",
       "    \n",
-      "    str, (opt: int) -> bool\"\"\"    \n",
+      "    str, (opt: int) -> bool\n",
+      "    \"\"\"    \n",
       "    now = time.time()\n",
-      "    cutoff = now - (days * SECONDS_IN_DAY)  # Total number of seconds    \n",
+      "    cutoff = now - (days * SECONDS_IN_DAY)\n",
       "    t = os.stat(filename)\n",
       "    creation_time = t.st_ctime\n",
       "    if creation_time < cutoff:\n",
