last push at CSA

--- a/notebooks/space_weather_tools.ipynb
+++ b/notebooks/space_weather_tools.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing the Ovation PRIME Aurora Forecast\n",
+    "# Visualizing NOAA's Ovation PRIME Aurora Forecast\n",
     "The following notebook shows the various exploratory steps in creating a series of hooks for Python regarding live space weather data that is made available by the [National Oceanic and Atmospheric Administration](http://www.swpc.noaa.gov/)."
    ]
   },
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now input this as an overlay in Google Earth:"
+    "We can now input this as an [overlay in Google Earth](https://support.google.com/earth/answer/148099?hl=en):"
    ]
   },
   {
